fixes join icon spacing in asides

--- a/ui/css/article.css
+++ b/ui/css/article.css
@@ -2027,6 +2027,10 @@ aside { }
             font-size: 1em;
         }
 
+        aside .messaging-block--ask .dollar-heart-svg {
+            margin-right: -.35em;
+        }
+
     .messaging-zone .messaging-block {
       border-top: none;
       border-bottom: 1px solid #A8A8A8;
